--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import { ClientRouter } from "astro:transitions";
+
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +10,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>インビザライン矯正医として患者様に選ばれるための2週間集中セミナー</title>
+		<ClientRouter />
 	</head>
 	<body>
 		<slot />
