--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import { ClientRouter } from "astro:transitions";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>インビザライン矯正医として患者様に選ばれるための2週間集中セミナー</title>
-		<ClientRouter />
+		<!-- <ClientRouter /> -->
 	</head>
 	<body>
 		<slot />
