--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import DetailSection from '@/components/DetailSection.astro';
 import ReviewSection from '@/components/ReviewSection.astro';
 import OwnerSection from '@/components/OwnerSection.astro';
 import ApplySection from '@/components/ApplySection.astro';
+import Footer from '@/components/Footer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -33,4 +34,5 @@ import ApplySection from '@/components/ApplySection.astro';
 	<SectionWrapper>
 		<ApplySection />
 	</SectionWrapper>
+	<Footer />
 </Layout>
